# embedded-rust-smart-led-fade-in-out-mw-radar-uart-stm32f103

./: Cargo.toml  build.rs  mcu.config  memory.x  project_structure.config
.cargo/: config.toml
mw_radar/src/: data.rs  lib.rs  parameter.rs  parse_result.rs  radar.rs  report_debug_mode.rs  report_mode.rs  send_models.rs
src/: main.rs
src/menu_navigator/: mod.rs  rotary_encoder.rs
src/mw_radar/: data.rs  mod.rs  parameter.rs  parse_dynamic_result.rs  radar.rs  read.rs  read_param.rs  read_report.rs  read_report_debug.rs  report_debug_mode.rs  report_mode.rs  report_normal_mode.rs  send_models.rs  utils.rs
src/pins/: mod.rs
src/pins/configs/: i2c1.rs  mod.rs  usart1.rs
src/pins/utils/: gpio_out.rs  i2c1.rs  i2c2.rs  mod.rs
